src/Test/Fixtures/Good/TypeQualifier/affineInferredQubits.lf
let affine qs = qalloc(2);