src/Test/Fixtures/Bad/Types/unexpectedSecondParamInInferredDeclaration.lf
let theta = Param("theta") Param("gamma");